@startuml

'http://plantuml.com/skinparam.html
skinparam handwritten true
skinparam monochrome true
skinparam packageStyle rect
skinparam defaultFontName FG Virgil
skinparam shadowing false

package Transaction-Aggregate <<Cloud>> {

    package AccountCard-Aggregate <<Cloud>> {
      class AccountCard <<AggregateRoot>>
      class Balance <<ValueObject>>
      class MecanographicNumber <<ValueObject>>
    }
    class Transaction <<AggregateRoot>>
    class TransactionID <<ValueObject>>
    class Money <<ValueObject>>
}

AccountCard "1" --> "1" Balance : has
AccountCard "1" --> "1" MecanographicNumber : identified by
Transaction "1" --> "1" Money : has
Transaction "1" --> "1" TransactionID : identified by

Transaction "*" --> "1" AccountCard : references


@enduml